--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,45 @@
 .main-container {
     margin-top: 40px;
 }
+
+/* Scroll Effect  */
+#scroll article aside{
+    border: 1px solid silver;
+    margin: 10px auto;
+    position: relative;
+    background: white;
+    height: auto;
+    overflow: hidden;
+}
+
+#scroll article aside img{
+   width: 100%;
+   border: 5px solid white;
+}
+
+#scroll article aside h1{
+    font-size: 30px;
+    padding: 10px 20px;
+    color: #666;
+ }
+
+ #scroll article aside p{
+    font-size: 14px;
+    padding: 0px 20px;
+ }
+
+ #scroll article aside button{
+    float: right;
+    margin: 20px;
+    font-size: 12px;
+    border: 0px;
+    background: #333;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    
+ }
+
+ .article {
+     margin-right: 60px;
+ }
